// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider can apply body theme to body 1`] = `
<body
  class=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-checked-background: #edebe9;
        --button-checked-contentColor: #201f1e;
        --button-checkedHovered-background: #edebe9;
        --button-checkedHovered-contentColor: #000000;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-disabled-dividerColor: #c8c6c4;
        --button-disabled-iconColor: #a19f9d;
        --button-disabled-secondaryContentColor: #a19f9d;
        --button-dividerColor: #c8c6c4;
        --button-dividerThickness: var(--button-borderWidth);
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-focusWidth: 2px;
        --button-focused-background: var(--button-background);
        --button-focused-borderColor: var(--button-borderColor);
        --button-focused-contentColor: var(--button-contentColor);
        --button-focused-iconColor: var(--button-iconColor);
        --button-focused-menuIconColor: var(--button-menuIconColor);
        --button-focused-secondaryContentColor: var(--button-focused-contentColor);
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-height: var(--button-size-regular);
        --button-hovered-background: #f3f2f1;
        --button-hovered-borderColor: #8a8886;
        --button-hovered-contentColor: #201f1e;
        --button-hovered-iconColor: var(--button-iconColor);
        --button-hovered-menuIconColor: var(--button-menuIconColor);
        --button-hovered-secondaryContentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-innerFocusWidth: 2px;
        --button-menuIconColor: inherit;
        --button-menuIconSize: 12px;
        --button-minHeight: var(--button-size-regular);
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-borderColor: #8a8886;
        --button-pressed-contentColor: #201f1e;
        --button-pressed-iconColor: var(--button-iconColor);
        --button-pressed-menuIconColor: var(--button-menuIconColor);
        --button-pressed-secondaryContentColor: #201f1e;
        --button-secondaryContentColor: #605e5c;
        --button-secondaryContentFontSize: 12px;
        --button-secondaryContentFontWeight: normal;
        --button-secondaryContentMarginTop: 5px;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --color-body-background: black;
        --color-body-contentColor: white;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
        --ghost-background: transparent;
        --ghost-borderColor: transparent;
        --ghost-checked-background: #edebe9;
        --ghost-checked-borderColor: var(--ghost-borderColor);
        --ghost-checked-contentColor: #000000;
        --ghost-checked-iconColor: #004578;
        --ghost-checkedHovered-background: #e1dfdd;
        --ghost-checkedHovered-borderColor: var(--ghost-borderColor);
        --ghost-checkedHovered-contentColor: #0078d4;
        --ghost-checkedHovered-iconColor: #0078d4;
        --ghost-contentColor: #323130;
        --ghost-disabled-background: #f3f2f1;
        --ghost-disabled-borderColor: var(--ghost-borderColor);
        --ghost-disabled-contentColor: #a19f9d;
        --ghost-disabled-iconColor: inherit;
        --ghost-disabled-secondaryContentColor: #a19f9d;
        --ghost-expanded-contentColor: #0078d4;
        --ghost-focused-background: var(--ghost-background);
        --ghost-focused-borderColor: var(--ghost-borderColor);
        --ghost-focused-contentColor: #323130;
        --ghost-focused-iconColor: #106ebe;
        --ghost-focused-secondaryContentColor: #323130;
        --ghost-fontWeight: normal;
        --ghost-hovered-background: #f3f2f1;
        --ghost-hovered-borderColor: var(--ghost-borderColor);
        --ghost-hovered-contentColor: #0078d4;
        --ghost-hovered-iconColor: #0078d4;
        --ghost-hovered-secondaryContentColor: #0078d4;
        --ghost-iconColor: #106ebe;
        --ghost-menuIconColor: #605e5c;
        --ghost-pressed-background: #edebe9;
        --ghost-pressed-borderColor: var(--ghost-borderColor);
        --ghost-pressed-contentColor: #000000;
        --ghost-pressed-iconColor: #004578;
        --ghost-pressed-secondaryContentColor: #000000;
        --ghost-secondaryContentColor: #323130;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
/>
`;

exports[`ThemeProvider can apply body theme to body 2`] = `
<div
  className=
      foo
      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-checked-background: #edebe9;
        --button-checked-contentColor: #201f1e;
        --button-checkedHovered-background: #edebe9;
        --button-checkedHovered-contentColor: #000000;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-disabled-dividerColor: #c8c6c4;
        --button-disabled-iconColor: #a19f9d;
        --button-disabled-secondaryContentColor: #a19f9d;
        --button-dividerColor: #c8c6c4;
        --button-dividerThickness: var(--button-borderWidth);
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-focusWidth: 2px;
        --button-focused-background: var(--button-background);
        --button-focused-borderColor: var(--button-borderColor);
        --button-focused-contentColor: var(--button-contentColor);
        --button-focused-iconColor: var(--button-iconColor);
        --button-focused-menuIconColor: var(--button-menuIconColor);
        --button-focused-secondaryContentColor: var(--button-focused-contentColor);
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-height: var(--button-size-regular);
        --button-hovered-background: #f3f2f1;
        --button-hovered-borderColor: #8a8886;
        --button-hovered-contentColor: #201f1e;
        --button-hovered-iconColor: var(--button-iconColor);
        --button-hovered-menuIconColor: var(--button-menuIconColor);
        --button-hovered-secondaryContentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-innerFocusWidth: 2px;
        --button-menuIconColor: inherit;
        --button-menuIconSize: 12px;
        --button-minHeight: var(--button-size-regular);
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-borderColor: #8a8886;
        --button-pressed-contentColor: #201f1e;
        --button-pressed-iconColor: var(--button-iconColor);
        --button-pressed-menuIconColor: var(--button-menuIconColor);
        --button-pressed-secondaryContentColor: #201f1e;
        --button-secondaryContentColor: #605e5c;
        --button-secondaryContentFontSize: 12px;
        --button-secondaryContentFontWeight: normal;
        --button-secondaryContentMarginTop: 5px;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --color-body-background: black;
        --color-body-contentColor: white;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
        --ghost-background: transparent;
        --ghost-borderColor: transparent;
        --ghost-checked-background: #edebe9;
        --ghost-checked-borderColor: var(--ghost-borderColor);
        --ghost-checked-contentColor: #000000;
        --ghost-checked-iconColor: #004578;
        --ghost-checkedHovered-background: #e1dfdd;
        --ghost-checkedHovered-borderColor: var(--ghost-borderColor);
        --ghost-checkedHovered-contentColor: #0078d4;
        --ghost-checkedHovered-iconColor: #0078d4;
        --ghost-contentColor: #323130;
        --ghost-disabled-background: #f3f2f1;
        --ghost-disabled-borderColor: var(--ghost-borderColor);
        --ghost-disabled-contentColor: #a19f9d;
        --ghost-disabled-iconColor: inherit;
        --ghost-disabled-secondaryContentColor: #a19f9d;
        --ghost-expanded-contentColor: #0078d4;
        --ghost-focused-background: var(--ghost-background);
        --ghost-focused-borderColor: var(--ghost-borderColor);
        --ghost-focused-contentColor: #323130;
        --ghost-focused-iconColor: #106ebe;
        --ghost-focused-secondaryContentColor: #323130;
        --ghost-fontWeight: normal;
        --ghost-hovered-background: #f3f2f1;
        --ghost-hovered-borderColor: var(--ghost-borderColor);
        --ghost-hovered-contentColor: #0078d4;
        --ghost-hovered-iconColor: #0078d4;
        --ghost-hovered-secondaryContentColor: #0078d4;
        --ghost-iconColor: #106ebe;
        --ghost-menuIconColor: #605e5c;
        --ghost-pressed-background: #edebe9;
        --ghost-pressed-borderColor: var(--ghost-borderColor);
        --ghost-pressed-contentColor: #000000;
        --ghost-pressed-iconColor: #004578;
        --ghost-pressed-secondaryContentColor: #000000;
        --ghost-secondaryContentColor: #323130;
      }
>
  app
</div>
`;

exports[`ThemeProvider can apply body theme to none 1`] = `
<div
  className=
      foo
      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-checked-background: #edebe9;
        --button-checked-contentColor: #201f1e;
        --button-checkedHovered-background: #edebe9;
        --button-checkedHovered-contentColor: #000000;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-disabled-dividerColor: #c8c6c4;
        --button-disabled-iconColor: #a19f9d;
        --button-disabled-secondaryContentColor: #a19f9d;
        --button-dividerColor: #c8c6c4;
        --button-dividerThickness: var(--button-borderWidth);
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-focusWidth: 2px;
        --button-focused-background: var(--button-background);
        --button-focused-borderColor: var(--button-borderColor);
        --button-focused-contentColor: var(--button-contentColor);
        --button-focused-iconColor: var(--button-iconColor);
        --button-focused-menuIconColor: var(--button-menuIconColor);
        --button-focused-secondaryContentColor: var(--button-focused-contentColor);
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-height: var(--button-size-regular);
        --button-hovered-background: #f3f2f1;
        --button-hovered-borderColor: #8a8886;
        --button-hovered-contentColor: #201f1e;
        --button-hovered-iconColor: var(--button-iconColor);
        --button-hovered-menuIconColor: var(--button-menuIconColor);
        --button-hovered-secondaryContentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-innerFocusWidth: 2px;
        --button-menuIconColor: inherit;
        --button-menuIconSize: 12px;
        --button-minHeight: var(--button-size-regular);
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-borderColor: #8a8886;
        --button-pressed-contentColor: #201f1e;
        --button-pressed-iconColor: var(--button-iconColor);
        --button-pressed-menuIconColor: var(--button-menuIconColor);
        --button-pressed-secondaryContentColor: #201f1e;
        --button-secondaryContentColor: #605e5c;
        --button-secondaryContentFontSize: 12px;
        --button-secondaryContentFontWeight: normal;
        --button-secondaryContentMarginTop: 5px;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --color-body-background: black;
        --color-body-contentColor: white;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
        --ghost-background: transparent;
        --ghost-borderColor: transparent;
        --ghost-checked-background: #edebe9;
        --ghost-checked-borderColor: var(--ghost-borderColor);
        --ghost-checked-contentColor: #000000;
        --ghost-checked-iconColor: #004578;
        --ghost-checkedHovered-background: #e1dfdd;
        --ghost-checkedHovered-borderColor: var(--ghost-borderColor);
        --ghost-checkedHovered-contentColor: #0078d4;
        --ghost-checkedHovered-iconColor: #0078d4;
        --ghost-contentColor: #323130;
        --ghost-disabled-background: #f3f2f1;
        --ghost-disabled-borderColor: var(--ghost-borderColor);
        --ghost-disabled-contentColor: #a19f9d;
        --ghost-disabled-iconColor: inherit;
        --ghost-disabled-secondaryContentColor: #a19f9d;
        --ghost-expanded-contentColor: #0078d4;
        --ghost-focused-background: var(--ghost-background);
        --ghost-focused-borderColor: var(--ghost-borderColor);
        --ghost-focused-contentColor: #323130;
        --ghost-focused-iconColor: #106ebe;
        --ghost-focused-secondaryContentColor: #323130;
        --ghost-fontWeight: normal;
        --ghost-hovered-background: #f3f2f1;
        --ghost-hovered-borderColor: var(--ghost-borderColor);
        --ghost-hovered-contentColor: #0078d4;
        --ghost-hovered-iconColor: #0078d4;
        --ghost-hovered-secondaryContentColor: #0078d4;
        --ghost-iconColor: #106ebe;
        --ghost-menuIconColor: #605e5c;
        --ghost-pressed-background: #edebe9;
        --ghost-pressed-borderColor: var(--ghost-borderColor);
        --ghost-pressed-contentColor: #000000;
        --ghost-pressed-iconColor: #004578;
        --ghost-pressed-secondaryContentColor: #000000;
        --ghost-secondaryContentColor: #323130;
      }
>
  app
</div>
`;

exports[`ThemeProvider can handle a partial theme 1`] = `
<div
  className=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-checked-background: #edebe9;
        --button-checked-contentColor: #201f1e;
        --button-checkedHovered-background: #edebe9;
        --button-checkedHovered-contentColor: #000000;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-disabled-dividerColor: #c8c6c4;
        --button-disabled-iconColor: #a19f9d;
        --button-disabled-secondaryContentColor: #a19f9d;
        --button-dividerColor: #c8c6c4;
        --button-dividerThickness: var(--button-borderWidth);
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-focusWidth: 2px;
        --button-focused-background: var(--button-background);
        --button-focused-borderColor: var(--button-borderColor);
        --button-focused-contentColor: var(--button-contentColor);
        --button-focused-iconColor: var(--button-iconColor);
        --button-focused-menuIconColor: var(--button-menuIconColor);
        --button-focused-secondaryContentColor: var(--button-focused-contentColor);
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-height: var(--button-size-regular);
        --button-hovered-background: #f3f2f1;
        --button-hovered-borderColor: #8a8886;
        --button-hovered-contentColor: #201f1e;
        --button-hovered-iconColor: var(--button-iconColor);
        --button-hovered-menuIconColor: var(--button-menuIconColor);
        --button-hovered-secondaryContentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-innerFocusWidth: 2px;
        --button-menuIconColor: inherit;
        --button-menuIconSize: 12px;
        --button-minHeight: var(--button-size-regular);
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-borderColor: #8a8886;
        --button-pressed-contentColor: #201f1e;
        --button-pressed-iconColor: var(--button-iconColor);
        --button-pressed-menuIconColor: var(--button-menuIconColor);
        --button-pressed-secondaryContentColor: #201f1e;
        --button-secondaryContentColor: #605e5c;
        --button-secondaryContentFontSize: 12px;
        --button-secondaryContentFontWeight: normal;
        --button-secondaryContentMarginTop: 5px;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --color-body-background: #ffffff;
        --color-body-contentColor: #323130;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
        --foo-background: red;
        --ghost-background: transparent;
        --ghost-borderColor: transparent;
        --ghost-checked-background: #edebe9;
        --ghost-checked-borderColor: var(--ghost-borderColor);
        --ghost-checked-contentColor: #000000;
        --ghost-checked-iconColor: #004578;
        --ghost-checkedHovered-background: #e1dfdd;
        --ghost-checkedHovered-borderColor: var(--ghost-borderColor);
        --ghost-checkedHovered-contentColor: #0078d4;
        --ghost-checkedHovered-iconColor: #0078d4;
        --ghost-contentColor: #323130;
        --ghost-disabled-background: #f3f2f1;
        --ghost-disabled-borderColor: var(--ghost-borderColor);
        --ghost-disabled-contentColor: #a19f9d;
        --ghost-disabled-iconColor: inherit;
        --ghost-disabled-secondaryContentColor: #a19f9d;
        --ghost-expanded-contentColor: #0078d4;
        --ghost-focused-background: var(--ghost-background);
        --ghost-focused-borderColor: var(--ghost-borderColor);
        --ghost-focused-contentColor: #323130;
        --ghost-focused-iconColor: #106ebe;
        --ghost-focused-secondaryContentColor: #323130;
        --ghost-fontWeight: normal;
        --ghost-hovered-background: #f3f2f1;
        --ghost-hovered-borderColor: var(--ghost-borderColor);
        --ghost-hovered-contentColor: #0078d4;
        --ghost-hovered-iconColor: #0078d4;
        --ghost-hovered-secondaryContentColor: #0078d4;
        --ghost-iconColor: #106ebe;
        --ghost-menuIconColor: #605e5c;
        --ghost-pressed-background: #edebe9;
        --ghost-pressed-borderColor: var(--ghost-borderColor);
        --ghost-pressed-contentColor: #000000;
        --ghost-pressed-iconColor: #004578;
        --ghost-pressed-secondaryContentColor: #000000;
        --ghost-secondaryContentColor: #323130;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div 1`] = `
<div
  className=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-checked-background: #edebe9;
        --button-checked-contentColor: #201f1e;
        --button-checkedHovered-background: #edebe9;
        --button-checkedHovered-contentColor: #000000;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-disabled-dividerColor: #c8c6c4;
        --button-disabled-iconColor: #a19f9d;
        --button-disabled-secondaryContentColor: #a19f9d;
        --button-dividerColor: #c8c6c4;
        --button-dividerThickness: var(--button-borderWidth);
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-focusWidth: 2px;
        --button-focused-background: var(--button-background);
        --button-focused-borderColor: var(--button-borderColor);
        --button-focused-contentColor: var(--button-contentColor);
        --button-focused-iconColor: var(--button-iconColor);
        --button-focused-menuIconColor: var(--button-menuIconColor);
        --button-focused-secondaryContentColor: var(--button-focused-contentColor);
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-height: var(--button-size-regular);
        --button-hovered-background: #f3f2f1;
        --button-hovered-borderColor: #8a8886;
        --button-hovered-contentColor: #201f1e;
        --button-hovered-iconColor: var(--button-iconColor);
        --button-hovered-menuIconColor: var(--button-menuIconColor);
        --button-hovered-secondaryContentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-innerFocusWidth: 2px;
        --button-menuIconColor: inherit;
        --button-menuIconSize: 12px;
        --button-minHeight: var(--button-size-regular);
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-borderColor: #8a8886;
        --button-pressed-contentColor: #201f1e;
        --button-pressed-iconColor: var(--button-iconColor);
        --button-pressed-menuIconColor: var(--button-menuIconColor);
        --button-pressed-secondaryContentColor: #201f1e;
        --button-secondaryContentColor: #605e5c;
        --button-secondaryContentFontSize: 12px;
        --button-secondaryContentFontWeight: normal;
        --button-secondaryContentMarginTop: 5px;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --color-body-background: #ffffff;
        --color-body-contentColor: #323130;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
        --ghost-background: transparent;
        --ghost-borderColor: transparent;
        --ghost-checked-background: #edebe9;
        --ghost-checked-borderColor: var(--ghost-borderColor);
        --ghost-checked-contentColor: #000000;
        --ghost-checked-iconColor: #004578;
        --ghost-checkedHovered-background: #e1dfdd;
        --ghost-checkedHovered-borderColor: var(--ghost-borderColor);
        --ghost-checkedHovered-contentColor: #0078d4;
        --ghost-checkedHovered-iconColor: #0078d4;
        --ghost-contentColor: #323130;
        --ghost-disabled-background: #f3f2f1;
        --ghost-disabled-borderColor: var(--ghost-borderColor);
        --ghost-disabled-contentColor: #a19f9d;
        --ghost-disabled-iconColor: inherit;
        --ghost-disabled-secondaryContentColor: #a19f9d;
        --ghost-expanded-contentColor: #0078d4;
        --ghost-focused-background: var(--ghost-background);
        --ghost-focused-borderColor: var(--ghost-borderColor);
        --ghost-focused-contentColor: #323130;
        --ghost-focused-iconColor: #106ebe;
        --ghost-focused-secondaryContentColor: #323130;
        --ghost-fontWeight: normal;
        --ghost-hovered-background: #f3f2f1;
        --ghost-hovered-borderColor: var(--ghost-borderColor);
        --ghost-hovered-contentColor: #0078d4;
        --ghost-hovered-iconColor: #0078d4;
        --ghost-hovered-secondaryContentColor: #0078d4;
        --ghost-iconColor: #106ebe;
        --ghost-menuIconColor: #605e5c;
        --ghost-pressed-background: #edebe9;
        --ghost-pressed-borderColor: var(--ghost-borderColor);
        --ghost-pressed-contentColor: #000000;
        --ghost-pressed-iconColor: #004578;
        --ghost-pressed-secondaryContentColor: #000000;
        --ghost-secondaryContentColor: #323130;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div with styling 1`] = `
<div
  className=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-checked-background: #edebe9;
        --button-checked-contentColor: #201f1e;
        --button-checkedHovered-background: #edebe9;
        --button-checkedHovered-contentColor: #000000;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-disabled-dividerColor: #c8c6c4;
        --button-disabled-iconColor: #a19f9d;
        --button-disabled-secondaryContentColor: #a19f9d;
        --button-dividerColor: #c8c6c4;
        --button-dividerThickness: var(--button-borderWidth);
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-focusWidth: 2px;
        --button-focused-background: var(--button-background);
        --button-focused-borderColor: var(--button-borderColor);
        --button-focused-contentColor: var(--button-contentColor);
        --button-focused-iconColor: var(--button-iconColor);
        --button-focused-menuIconColor: var(--button-menuIconColor);
        --button-focused-secondaryContentColor: var(--button-focused-contentColor);
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-height: var(--button-size-regular);
        --button-hovered-background: #f3f2f1;
        --button-hovered-borderColor: #8a8886;
        --button-hovered-contentColor: #201f1e;
        --button-hovered-iconColor: var(--button-iconColor);
        --button-hovered-menuIconColor: var(--button-menuIconColor);
        --button-hovered-secondaryContentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-innerFocusWidth: 2px;
        --button-menuIconColor: inherit;
        --button-menuIconSize: 12px;
        --button-minHeight: var(--button-size-regular);
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-borderColor: #8a8886;
        --button-pressed-contentColor: #201f1e;
        --button-pressed-iconColor: var(--button-iconColor);
        --button-pressed-menuIconColor: var(--button-menuIconColor);
        --button-pressed-secondaryContentColor: #201f1e;
        --button-secondaryContentColor: #605e5c;
        --button-secondaryContentFontSize: 12px;
        --button-secondaryContentFontWeight: normal;
        --button-secondaryContentMarginTop: 5px;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --color-body-background: white;
        --color-body-contentColor: black;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
        --ghost-background: transparent;
        --ghost-borderColor: transparent;
        --ghost-checked-background: #edebe9;
        --ghost-checked-borderColor: var(--ghost-borderColor);
        --ghost-checked-contentColor: #000000;
        --ghost-checked-iconColor: #004578;
        --ghost-checkedHovered-background: #e1dfdd;
        --ghost-checkedHovered-borderColor: var(--ghost-borderColor);
        --ghost-checkedHovered-contentColor: #0078d4;
        --ghost-checkedHovered-iconColor: #0078d4;
        --ghost-contentColor: #323130;
        --ghost-disabled-background: #f3f2f1;
        --ghost-disabled-borderColor: var(--ghost-borderColor);
        --ghost-disabled-contentColor: #a19f9d;
        --ghost-disabled-iconColor: inherit;
        --ghost-disabled-secondaryContentColor: #a19f9d;
        --ghost-expanded-contentColor: #0078d4;
        --ghost-focused-background: var(--ghost-background);
        --ghost-focused-borderColor: var(--ghost-borderColor);
        --ghost-focused-contentColor: #323130;
        --ghost-focused-iconColor: #106ebe;
        --ghost-focused-secondaryContentColor: #323130;
        --ghost-fontWeight: normal;
        --ghost-hovered-background: #f3f2f1;
        --ghost-hovered-borderColor: var(--ghost-borderColor);
        --ghost-hovered-contentColor: #0078d4;
        --ghost-hovered-iconColor: #0078d4;
        --ghost-hovered-secondaryContentColor: #0078d4;
        --ghost-iconColor: #106ebe;
        --ghost-menuIconColor: #605e5c;
        --ghost-pressed-background: #edebe9;
        --ghost-pressed-borderColor: var(--ghost-borderColor);
        --ghost-pressed-contentColor: #000000;
        --ghost-pressed-iconColor: #004578;
        --ghost-pressed-secondaryContentColor: #000000;
        --ghost-secondaryContentColor: #323130;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
>
  Hello
</div>
`;

exports[`ThemeProvider renders nested themes 1`] = `
<div
  className=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-checked-background: #edebe9;
        --button-checked-contentColor: #201f1e;
        --button-checkedHovered-background: #edebe9;
        --button-checkedHovered-contentColor: #000000;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-disabled-dividerColor: #c8c6c4;
        --button-disabled-iconColor: #a19f9d;
        --button-disabled-secondaryContentColor: #a19f9d;
        --button-dividerColor: #c8c6c4;
        --button-dividerThickness: var(--button-borderWidth);
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-focusWidth: 2px;
        --button-focused-background: var(--button-background);
        --button-focused-borderColor: var(--button-borderColor);
        --button-focused-contentColor: var(--button-contentColor);
        --button-focused-iconColor: var(--button-iconColor);
        --button-focused-menuIconColor: var(--button-menuIconColor);
        --button-focused-secondaryContentColor: var(--button-focused-contentColor);
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-height: var(--button-size-regular);
        --button-hovered-background: #f3f2f1;
        --button-hovered-borderColor: #8a8886;
        --button-hovered-contentColor: #201f1e;
        --button-hovered-iconColor: var(--button-iconColor);
        --button-hovered-menuIconColor: var(--button-menuIconColor);
        --button-hovered-secondaryContentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-innerFocusWidth: 2px;
        --button-menuIconColor: inherit;
        --button-menuIconSize: 12px;
        --button-minHeight: var(--button-size-regular);
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-borderColor: #8a8886;
        --button-pressed-contentColor: #201f1e;
        --button-pressed-iconColor: var(--button-iconColor);
        --button-pressed-menuIconColor: var(--button-menuIconColor);
        --button-pressed-secondaryContentColor: #201f1e;
        --button-secondaryContentColor: #605e5c;
        --button-secondaryContentFontSize: 12px;
        --button-secondaryContentFontWeight: normal;
        --button-secondaryContentMarginTop: 5px;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --color-body-background: white;
        --color-body-contentColor: black;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
        --ghost-background: transparent;
        --ghost-borderColor: transparent;
        --ghost-checked-background: #edebe9;
        --ghost-checked-borderColor: var(--ghost-borderColor);
        --ghost-checked-contentColor: #000000;
        --ghost-checked-iconColor: #004578;
        --ghost-checkedHovered-background: #e1dfdd;
        --ghost-checkedHovered-borderColor: var(--ghost-borderColor);
        --ghost-checkedHovered-contentColor: #0078d4;
        --ghost-checkedHovered-iconColor: #0078d4;
        --ghost-contentColor: #323130;
        --ghost-disabled-background: #f3f2f1;
        --ghost-disabled-borderColor: var(--ghost-borderColor);
        --ghost-disabled-contentColor: #a19f9d;
        --ghost-disabled-iconColor: inherit;
        --ghost-disabled-secondaryContentColor: #a19f9d;
        --ghost-expanded-contentColor: #0078d4;
        --ghost-focused-background: var(--ghost-background);
        --ghost-focused-borderColor: var(--ghost-borderColor);
        --ghost-focused-contentColor: #323130;
        --ghost-focused-iconColor: #106ebe;
        --ghost-focused-secondaryContentColor: #323130;
        --ghost-fontWeight: normal;
        --ghost-hovered-background: #f3f2f1;
        --ghost-hovered-borderColor: var(--ghost-borderColor);
        --ghost-hovered-contentColor: #0078d4;
        --ghost-hovered-iconColor: #0078d4;
        --ghost-hovered-secondaryContentColor: #0078d4;
        --ghost-iconColor: #106ebe;
        --ghost-menuIconColor: #605e5c;
        --ghost-pressed-background: #edebe9;
        --ghost-pressed-borderColor: var(--ghost-borderColor);
        --ghost-pressed-contentColor: #000000;
        --ghost-pressed-iconColor: #004578;
        --ghost-pressed-secondaryContentColor: #000000;
        --ghost-secondaryContentColor: #323130;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
>
  <div>
    Light theme
  </div>
  <div
    className=

        {
          --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          --body-fontSize: 14px;
          --body-fontWeight: 400;
          --body-mozOsxFontSmoothing: grayscale;
          --body-webkitFontSmoothing: antialiased;
          --button-background: #ffffff;
          --button-borderColor: #8a8886;
          --button-borderRadius: 2px;
          --button-borderWidth: 1px;
          --button-checked-background: #edebe9;
          --button-checked-contentColor: #201f1e;
          --button-checkedHovered-background: #edebe9;
          --button-checkedHovered-contentColor: #000000;
          --button-contentColor: #323130;
          --button-contentGap: 8px;
          --button-disabled-background: #f3f2f1;
          --button-disabled-borderColor: #f3f2f1;
          --button-disabled-contentColor: #a19f9d;
          --button-disabled-dividerColor: #c8c6c4;
          --button-disabled-iconColor: #a19f9d;
          --button-disabled-secondaryContentColor: #a19f9d;
          --button-dividerColor: #c8c6c4;
          --button-dividerThickness: var(--button-borderWidth);
          --button-focusColor: #000000;
          --button-focusInnerColor: #ffffff;
          --button-focusWidth: 2px;
          --button-focused-background: var(--button-background);
          --button-focused-borderColor: var(--button-borderColor);
          --button-focused-contentColor: var(--button-contentColor);
          --button-focused-iconColor: var(--button-iconColor);
          --button-focused-menuIconColor: var(--button-menuIconColor);
          --button-focused-secondaryContentColor: var(--button-focused-contentColor);
          --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          --button-fontSize: 14px;
          --button-fontWeight: 600;
          --button-height: var(--button-size-regular);
          --button-hovered-background: #f3f2f1;
          --button-hovered-borderColor: #8a8886;
          --button-hovered-contentColor: #201f1e;
          --button-hovered-iconColor: var(--button-iconColor);
          --button-hovered-menuIconColor: var(--button-menuIconColor);
          --button-hovered-secondaryContentColor: #201f1e;
          --button-iconColor: inherit;
          --button-iconSize: 16px;
          --button-innerFocusWidth: 2px;
          --button-menuIconColor: inherit;
          --button-menuIconSize: 12px;
          --button-minHeight: var(--button-size-regular);
          --button-paddingBottom: 0;
          --button-paddingLeft: 20px;
          --button-paddingRight: 20px;
          --button-paddingTop: 0;
          --button-pressed-background: #edebe9;
          --button-pressed-borderColor: #8a8886;
          --button-pressed-contentColor: #201f1e;
          --button-pressed-iconColor: var(--button-iconColor);
          --button-pressed-menuIconColor: var(--button-menuIconColor);
          --button-pressed-secondaryContentColor: #201f1e;
          --button-secondaryContentColor: #605e5c;
          --button-secondaryContentFontSize: 12px;
          --button-secondaryContentFontWeight: normal;
          --button-secondaryContentMarginTop: 5px;
          --button-size-large: 40px;
          --button-size-larger: 48px;
          --button-size-largest: 64px;
          --button-size-regular: 32px;
          --button-size-small: 24px;
          --button-size-smaller: 24px;
          --button-size-smallest: 24px;
          --color-body-background: black;
          --color-body-contentColor: white;
          --color-brand-background: #0078d4;
          --color-brand-borderColor: transparent;
          --color-brand-checked-background: #005a9e;
          --color-brand-checked-contentColor: #ffffff;
          --color-brand-checkedHovered-background: #005a9e;
          --color-brand-checkedHovered-contentColor: #ffffff;
          --color-brand-contentColor: #ffffff;
          --color-brand-disabled-background: #f3f2f1;
          --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
          --color-brand-disabled-contentColor: #a19f9d;
          --color-brand-disabled-dividerColor: #c8c6c4;
          --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
          --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
          --color-brand-dividerColor: #ffffff;
          --color-brand-focused-background: var(--color-brand-background);
          --color-brand-focused-borderColor: var(--color-brand-borderColor);
          --color-brand-focused-contentColor: var(--color-brand-contentColor);
          --color-brand-focused-iconColor: var(--color-brand-iconColor);
          --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
          --color-brand-hovered-background: #106ebe;
          --color-brand-hovered-borderColor: var(--color-brand-borderColor);
          --color-brand-hovered-contentColor: #ffffff;
          --color-brand-hovered-secondaryContentColor: #ffffff;
          --color-brand-iconColor: #ffffff;
          --color-brand-pressed-background: #005a9e;
          --color-brand-pressed-borderColor: var(--color-brand-borderColor);
          --color-brand-pressed-contentColor: #ffffff;
          --color-brand-pressed-iconColor: var(--color-brand-iconColor);
          --color-brand-pressed-secondaryContentColor: #ffffff;
          --color-brand-secondaryContentColor: #ffffff;
          --ghost-background: transparent;
          --ghost-borderColor: transparent;
          --ghost-checked-background: #edebe9;
          --ghost-checked-borderColor: var(--ghost-borderColor);
          --ghost-checked-contentColor: #000000;
          --ghost-checked-iconColor: #004578;
          --ghost-checkedHovered-background: #e1dfdd;
          --ghost-checkedHovered-borderColor: var(--ghost-borderColor);
          --ghost-checkedHovered-contentColor: #0078d4;
          --ghost-checkedHovered-iconColor: #0078d4;
          --ghost-contentColor: #323130;
          --ghost-disabled-background: #f3f2f1;
          --ghost-disabled-borderColor: var(--ghost-borderColor);
          --ghost-disabled-contentColor: #a19f9d;
          --ghost-disabled-iconColor: inherit;
          --ghost-disabled-secondaryContentColor: #a19f9d;
          --ghost-expanded-contentColor: #0078d4;
          --ghost-focused-background: var(--ghost-background);
          --ghost-focused-borderColor: var(--ghost-borderColor);
          --ghost-focused-contentColor: #323130;
          --ghost-focused-iconColor: #106ebe;
          --ghost-focused-secondaryContentColor: #323130;
          --ghost-fontWeight: normal;
          --ghost-hovered-background: #f3f2f1;
          --ghost-hovered-borderColor: var(--ghost-borderColor);
          --ghost-hovered-contentColor: #0078d4;
          --ghost-hovered-iconColor: #0078d4;
          --ghost-hovered-secondaryContentColor: #0078d4;
          --ghost-iconColor: #106ebe;
          --ghost-menuIconColor: #605e5c;
          --ghost-pressed-background: #edebe9;
          --ghost-pressed-borderColor: var(--ghost-borderColor);
          --ghost-pressed-contentColor: #000000;
          --ghost-pressed-iconColor: #004578;
          --ghost-pressed-secondaryContentColor: #000000;
          --ghost-secondaryContentColor: #323130;
        }
        {
          -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
          -webkit-font-smoothing: var(--body-webkitFontSmoothing);
          background: var(--color-body-background);
          color: var(--color-body-contentColor);
          font-family: var(--body-fontFamily);
          font-size: var(--body-fontSize);
          font-weight: var(--body-fontWeight);
        }
  >
    <div>
      Dark theme
    </div>
  </div>
</div>
`;
